# ai-engineer-research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  DEV_NOTES.md  README.md  pyproject.toml
.claude/: settings.json
config/: pipeline.yaml
config/prompts/: README.md
docker/: Dockerfile  Dockerfile.web  docker-compose.override.yml.example  docker-compose.yml
docker/searxng/: settings.yml
docs/: REPO_GUIDE.md  STAGE3_CONTRACT.md  USAGE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  agents.ts  api.ts  styles.css  types.ts  useEventStream.ts
frontend/src/components/: Accordion.tsx  Diagram.tsx  EgressPanel.tsx  EventLog.tsx  FetchSummary.tsx  History.tsx  LedgerTable.tsx  Loading.tsx  ParamsEditor.tsx  PromptEditor.tsx  ReferenceRepos.tsx  ReportView.tsx  RunForm.tsx  RunView.tsx  Segmented.tsx  Sidebar.tsx  Stepper.tsx  SubagentTree.tsx
scripts/: egress_probe.py  m0_toolcall_probe.py  reachability_probe.py
src/ai_engineer_research/: __init__.py  agent.py  checkpoint.py  clarify.py  cli.py  config.py  core.py  domains.py  evidence.py  manage.py  models.py  prompts.py  runlog.py  seed.py  subagents.py  tracing.py
src/ai_engineer_research/artifact/: __init__.py  extract.py  schema.py  store.py  validate.py
src/ai_engineer_research/cache/: __init__.py  store.py
src/ai_engineer_research/tools/: __init__.py  github.py  hf.py  pypi.py  scrape.py  search.py
src/ai_engineer_research/webui/: __init__.py  app.py  config_api.py  events.py  history.py  runner.py
tests/: test_api.py  test_config_params.py  test_event_handler.py  test_history.py  test_runner.py
