[project]
name = "ai-engineer-research"
version = "0.1.0"
description = "Stage 2 deep researcher: a multi-agent researcher (LangChain deepagents) over a curated AI-engineering wiki seed → gathers real code + web sources and analyzes limitations, alternatives, comparisons, and production-readiness."
# deepagents requires Python >= 3.11.
requires-python = ">=3.11"
dependencies = [
  # Agent harness over LangGraph. BETA — pinned; bump only after changelog review + pip-audit.
  # Supply-chain vigilance applies to deepagents / langgraph / langchain (see DECISIONS).
  "deepagents==0.6.7",
  # Crash-resume: LangGraph SqliteSaver checkpointer (shared DB, surgical per-run cleanup). Loaded
  # lazily + tolerated-absent in checkpoint.py, so this stays import-light for the local 3.10 box.
  "langgraph-checkpoint-sqlite>=2.0",
  # Role -> ChatModel factory returns ChatOpenAI (OpenAI-compatible: vLLM + frontier).
  "langchain-openai>=0.3",
  "langchain>=1.0",
  "python-dotenv",
  "pyyaml",
  "pydantic>=2",
]

[project.optional-dependencies]
# M1 — web tooling. Search = SearXNG over HTTP (httpx); extraction = browserless httpx + trafilatura
# (no headless browser: overkill for research sources + its download CDN is egress-blocked here).
web = [
  "httpx",
  "trafilatura>=1.8",
]
# Optional browser-based extraction (JS-heavy sources). NOT in the M1 path — needs the Playwright
# CDN unblocked on the server egress allowlist. Revisit in M2 only if browserless misses content.
browser = [
  "crawl4ai>=0.4",
]
# M2 — post-retrieval cross-encoder rerank (langchain 1.x: rerankers live in langchain-classic).
rerank = [
  "sentence-transformers",
  "langchain-classic",
  "langchain-huggingface",
]
# Upgrade path — semantic/BM25 vault + MCP sharing for Stage 3.
vault = [
  "rank-bm25",
  "langchain-mcp-adapters",
]
# M3+ — optional presentation layer (no pipeline logic lives here).
ui = ["gradio>=4"]
# Observability — optional Langfuse tracing (self-hosted; see service-depot). Lazy-imported + env-gated
# (AER_TRACING) in tracing.py, so the core stays import-light when tracing is off.
obs = ["langfuse>=3"]
# Server build — everything (incl. the optional browser path).
all = [
  "httpx", "trafilatura>=1.8", "crawl4ai>=0.4",
  "sentence-transformers", "langchain-classic", "langchain-huggingface",
  "rank-bm25", "langchain-mcp-adapters",
  "gradio>=4", "langfuse>=3",
]

[project.scripts]
ai-engineer-research = "ai_engineer_research.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
